Updated to the new version of metrics.
Note this may break until my metrics version 2.0.3 has cleared
and pushed on maven central. It works locally with the code.

--- a/java/build.gradle
+++ b/java/build.gradle
@@ -52,6 +52,7 @@ allprojects {
     }
     dependencies {
         implementation(libs.codehead.metrics)
+        implementation(libs.codehead.metrics.micrometer)
 
         implementation libs.slf4j.api
         implementation libs.bcprov
