--- a/java/common-javaClient/build.gradle
+++ b/java/common-javaClient/build.gradle
@@ -63,10 +63,6 @@ dependencies {
 
     testImplementation libs.jackson.dataformat.yaml
     testAnnotationProcessor libs.dagger.compiler
-
-    // Logging stuff... need all these for logback changes
-    implementation libs.logback.classic
-    implementation libs.logback.core
-    implementation libs.logback.access
+    implementation libs.bundles.logback
 
 }
