--- a/java/config-common/build.gradle
+++ b/java/config-common/build.gradle
@@ -33,11 +33,7 @@ dependencies {
 
     testImplementation libs.jetcd.test
     testImplementation libs.jackson.dataformat.yaml
-
-    // Logging stuff... need all these for logback changes
-    implementation libs.logback.classic
-    implementation libs.logback.core
-    implementation libs.logback.access
+    implementation libs.bundles.logback
 
 }
 
