--- a/java/control-javaClient/build.gradle
+++ b/java/control-javaClient/build.gradle
@@ -35,10 +35,7 @@ dependencies {
 
     implementation libs.retrofit
     implementation libs.retrofit2.converter.jackson
+    implementation libs.bundles.logback
 
-    // Logging stuff... need all these for logback changes
-    implementation libs.logback.classic
-    implementation libs.logback.core
-    implementation libs.logback.access
 
 }
