--- a/java/gradle/libs.versions.toml
+++ b/java/gradle/libs.versions.toml
@@ -26,7 +26,8 @@ jetcd = "0.8.3"
 junit-jupiter = "5.11.0"
 junit-platform = '1.11.0'
 liquibase = '4.29.1'
-logback = '1.5.7'
+logback = '1.4.14'
+logback-access = '2.0.3'
 log4j = '2.23.1'
 micrometer = '1.13.3'
 metrics = '4.2.27'
@@ -107,7 +108,7 @@ logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "lo
 logback-core = { module = "ch.qos.logback:logback-core", version.ref = "logback" }
 metrics-core = { module = "io.dropwizard.metrics:metrics-core", version.ref = "metrics" }
 metrics-jdbi = { module = "io.dropwizard.metrics:metrics-jdbi3", version.ref = "metrics" }
-metrics-jersey2 = { module = "io.dropwizard.metrics:metrics-jersey2", version.ref = "metrics" }
+metrics-jersey2 = { module = "io.dropwizard.metrics:metrics-jersey3", version.ref = "metrics" }
 metrics-caffeine = { module = "io.dropwizard.metrics:metrics-caffeine", version.ref = "metrics" }
 micrometer-core = { module = "io.micrometer:micrometer-core", version.ref = "micrometer" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mokito" }
@@ -139,6 +140,6 @@ testcontainers-postgresql = { module = "org.testcontainers:postgresql", version.
 
 [bundles]
 jackson = ["jackson-core", "jackson-databind", "jackson-annotations", "jackson-datatype-jdk8"]
-logback = ["logback-classic", "logback-core"]
+logback = ["logback-classic", "logback-core", "logback-access"]
 log4j = ["log4j-api", "log4j-core"]
 testing = ["mockito-core", "mockito-junit-jupiter", "assertj", "junit-jupiter", "junit-jupiter-api", "junit-jupiter-engine", "junit-jupiter-params", "codehead-test"]
