--- a/java/node/build.gradle
+++ b/java/node/build.gradle
@@ -61,11 +61,7 @@ dependencies {
     testImplementation libs.openfeign.java11
     testImplementation libs.openfeign.jaxrs3
 
-    // Logging stuff... need all these for logback changes
-    implementation libs.logback.classic
-    implementation libs.logback.core
-    implementation libs.logback.access
-
+    implementation libs.bundles.logback
 }
 
 application {
