--- a/java/proxy-common/build.gradle
+++ b/java/proxy-common/build.gradle
@@ -24,11 +24,6 @@ dependencies {
     implementation libs.dropwizard4.auth
     implementation libs.dropwizard4.core
     implementation libs.dropwizard4.jackson
-
-    // Logging stuff... need all these for logback changes
-    implementation libs.logback.classic
-    implementation libs.logback.core
-    implementation libs.logback.access
-
+    implementation libs.bundles.logback
 }
 
