--- a/java/server-common/build.gradle
+++ b/java/server-common/build.gradle
@@ -42,11 +42,7 @@ dependencies {
 
     testImplementation libs.jackson.dataformat.yaml
 
-    // Logging stuff... need all these for logback changes
-    implementation libs.logback.classic
-    implementation libs.logback.core
-    implementation libs.logback.access
-
+    implementation libs.bundles.logback
     // from the BOM of dropwizard...
     api 'org.eclipse.jetty:jetty-alpn-conscrypt-server'
 }
