--- a/java/settings.gradle
+++ b/java/settings.gradle
@@ -4,6 +4,18 @@
  */
 
 
+buildscript {
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url "https://plugins.gradle.org/m2/" }
+        maven { url "https://maven.google.com" } // Google's Maven repository
+        gradlePluginPortal() // was jcenter() which is dying
+        google()
+    }
+}
+
 // All subprojects we want to build.
 include ':the-ring', ':local-queue', ':liquibase-common',
         ':common', ':server-common', ':common-javaClient', ':config-common',
