--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,7 +8,8 @@ updates:
   - package-ecosystem: "gradle" # See documentation for possible values
     directory: "java/buildSrc" # Location of package manifests
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "thursday"
     groups:
       # Specify a name for the group, which will be used in pull request titles
       # and branch names
@@ -22,7 +23,7 @@ updates:
     directory: "java/" # Location of package manifests
     schedule:
       interval: "weekly"
-      day: "saturday"
+      day: "friday"
     groups:
        # Specify a name for the group, which will be used in pull request titles
        # and branch names
