Dagger updated to 2.56, gradle 8.13

--- a/java/build.gradle
+++ b/java/build.gradle
@@ -12,6 +12,11 @@ allprojects {
     apply plugin: "buildlogic.java-library-conventions"
 
     dependencies {
+
+        // bug for dagger 2.56 https://mvnrepository.com/artifact/com.squareup/kotlinpoet-javapoet
+        annotationProcessor("com.squareup:kotlinpoet-javapoet:2.1.0")
+        testAnnotationProcessor("com.squareup:kotlinpoet-javapoet:2.1.0")
+
         implementation(libs.codehead.metrics)
         implementation(libs.codehead.metrics.micrometer)
 
