Added caffeine and codecs, started the reduction

--- a/java/common/build.gradle
+++ b/java/common/build.gradle
@@ -18,6 +18,8 @@ base {
 //jacocoTestReport.finalizedBy jacocoTestCoverageVerification  // Require code coverage to pass
 
 dependencies {
+    implementation libs.caffeine
+    implementation(libs.commons.codec)
     implementation libs.javax.inject
     implementation libs.dagger
     annotationProcessor libs.dagger.compiler
