--- a/java/gradle/libs.versions.toml
+++ b/java/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ hsqldb = '2.7.4'
 httpclient = '4.5.14'
 immutables = '2.11.3'
 jackson = '2.20.0'
+jackson_annotations = '2.20'
 jdbi = '3.49.5'
 jetcd = "0.8.5"
 junit-jupiter = "5.13.4"
@@ -79,7 +80,7 @@ immutables-value = { module = "org.immutables:value", version.ref = "immutables"
 immutables-annotations = { module = "org.immutables:value-annotations", version.ref = "immutables" }
 jackson-core = { module = "com.fasterxml.jackson.core:jackson-core", version.ref = "jackson" }
 jackson-databind = { module = "com.fasterxml.jackson.core:jackson-databind", version.ref = "jackson" }
-jackson-annotations = { module = "com.fasterxml.jackson.core:jackson-annotations", version.ref = "jackson" }
+jackson-annotations = { module = "com.fasterxml.jackson.core:jackson-annotations", version.ref = "jackson_annotations" }
 jackson-datatype-jdk8 = { module = "com.fasterxml.jackson.datatype:jackson-datatype-jdk8", version.ref = "jackson" }
 jackson-dataformat-yaml = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml", version.ref = "jackson" }
 javax-inject = { module = "javax.inject:javax.inject", version = "1" }
