Removed https from Java so it can be in docker sidecars later.
The current https implementation in java isn't realistic. You would really use a
sidecar with something like haproxy that pushes to java. Something about the
conscrypt library was breaking a change within jetcd so I ended up just removing
conscrypt anyways. and converted back to http flows. To get the right solutino
working is a config change for svarm and sidecar additions within docker. Thats
a task for a different day.

--- a/java/control/src/main/resources/docker-control-config.yaml
+++ b/java/control/src/main/resources/docker-control-config.yaml
@@ -43,30 +43,11 @@ server:
   adminContextPath: /
   applicationContextPath: /
   applicationConnectors:
-    - type: h2
-      jceProvider: Conscrypt
+    - type: http
       port: 8080
-      maxConcurrentStreams: 1024
-      initialStreamRecvWindow: 65535
-      keyStorePath: /server/keystore.jks
-      keyStorePassword: password
-      trustStorePath: /server/cacerts.jks
-      trustStorePassword: password
-      certAlias: svarm
-      validateCerts: false
   adminConnectors:
-    - type: h2
-      jceProvider: Conscrypt
+    - type: http
       port: 8081
-      maxConcurrentStreams: 1024
-      initialStreamRecvWindow: 65535
-      keyStorePath: /server/keystore.jks
-      keyStorePassword: password
-      trustStorePath: /server/cacerts.jks
-      trustStorePassword: password
-      certAlias: svarm
-      validateCerts: false
-
 health:
   healthCheckUrlPaths: [ "/health-check" ]
   healthChecks:
