--- a/java/endToEnd/src/test/resources/node-config.yaml
+++ b/java/endToEnd/src/test/resources/node-config.yaml
@@ -1,8 +1,8 @@
 databaseDirectory: /tmp/endToEnd
 runDatabaseInMemory: false
-controlPlaneUrl: https://control:8080/
+controlPlaneUrl: http://control:8080/
 nodePort: 8080
-nodeScheme: https
+nodeScheme: http
 useTestJavaClient: true
 
 logging:
@@ -41,31 +41,11 @@ server:
   adminContextPath: /
   applicationContextPath: /
   applicationConnectors:
-    - type: h2
-      jceProvider: Conscrypt
+    - type: http
       port: 8080
-      maxConcurrentStreams: 1024
-      initialStreamRecvWindow: 65535
-      keyStorePath: /server/keystore.jks
-      keyStorePassword: password
-      trustStorePath: /server/cacerts.jks
-      trustStorePassword: password
-      certAlias: node
-      validateCerts: false
-      disableSniHostCheck: true  # Work with docker hosts
   adminConnectors:
-    - type: h2
+    - type: http
       port: 8081
-      jceProvider: Conscrypt
-      maxConcurrentStreams: 1024
-      initialStreamRecvWindow: 65535
-      keyStorePath: /server/keystore.jks
-      keyStorePassword: password
-      trustStorePath: /server/cacerts.jks
-      trustStorePassword: password
-      certAlias: node
-      validateCerts: false
-      disableSniHostCheck: true  # Work with docker hosts
 
 etcdConfiguration:
   target: ip:///etcd:2379
